--- a/demo/index.html
+++ b/demo/index.html
@@ -17,6 +17,7 @@
   <li><a href="authorizer.html">Authorizer editor</a></li>
   <li><a href="playground.html">Datalog playground</a></li>
   <li><a href="playground-alternate.html">Datalog playground from base64</a></li>
+  <li><a href="playground-lite.html">Datalog playground lite</a></li>
   <li><a href="playground-control.html">Datalog playground Configurator</a></li>
   <li><a href="generator.html">Token generator</a></li>
 </ul>
