--- a/demo/index.html
+++ b/demo/index.html
@@ -18,6 +18,8 @@
   <li><a href="playground.html">Datalog playground</a></li>
   <li><a href="playground-alternate.html">Datalog playground from base64</a></li>
   <li><a href="playground-lite.html">Datalog playground lite</a></li>
+  <li><a href="constraints.html">Responsive</a></li>
+  <li><a href="not-constraints.html">Unconstraint Responsive</a></li>
   <li><a href="playground-control.html">Datalog playground Configurator</a></li>
   <li><a href="generator.html">Token generator</a></li>
 </ul>
