--- a/demo/playground-lite.html
+++ b/demo/playground-lite.html
@@ -17,10 +17,10 @@
     public_key="true"
     third_party="true"
     >
-  <code class="block">user(12)</code>
+  <code class="block">user_group($user, $group) #<= user($user), group($group);</code>
   <code class="block">check if user(12)</code>
   <code class="block">check if user(12)</code>
-  <code class="authorizer">check if user(12)</code>
+  <code class="authorizer">user_group($user, $group) #<= user($user), group($group);</code>
 </bc-playground-lite>
 </body>
 </html>
