Configure seed token display

--- a/demo/playground-lite.html
+++ b/demo/playground-lite.html
@@ -17,6 +17,7 @@
     public_key="true"
     third_party="true"
     revocation_ids="true"
+    display_seed_token="true"
     seed_private_key="6058d4f25d6f3c2a021019399f01fd0858561989dd101f5b2bf7cfae3b261f6b"
     seed_token="EnYKDBgDIggKBggKEgIQDBIkCAASIO3Q9t40Kh5qcjbWJE8j2D7t_OzQWaOGyFBVcBSY53AzGkDQoEhiKR45KfCy5yiEmDayrwCIsjlNgKjpw4GW1EetBL2oVBs8TDm_T1FQEK-OOvoj-ZJKh6U1NmWCum2DNcAAIiIKILL39YHW3jwGqCL9bn6CZfvAD4QBaWpb3DT1ptL_P5Iv"
     seed_rng="0"
