Uncouple revocation and token display

--- a/demo/playground-lite.html
+++ b/demo/playground-lite.html
@@ -13,6 +13,7 @@
     token="true"
     result="true"
     facts="true"
+    regenerate="true"
     custom_external="true"
     public_key="true"
     third_party="true"
